--- a/license_audit.yml
+++ b/license_audit.yml
@@ -80,17 +80,12 @@
         src: "{{ playbook_dir }}/tower-inactive-hosts/reports/fragments"
         dest: "{{ playbook_dir }}/tower-inactive-hosts/reports/inactive_hosts.csv"
 
-    - name: Add Headers
-      lineinfile:
-        insertbefore: BOF
-        line: "Hostname, Days Inactive"
-        path: "{{ playbook_dir }}/tower-inactive-hosts/reports/inactive_hosts.csv"
-
-
     - name: Add title
-      lineinfile:
+      blockinfile:
         insertbefore: BOF
-        line: "{{ org_name }} ,"
+        block: |
+           "{{ org_name }} ,"
+           Hostname, Days Inactive
         path: "{{ playbook_dir }}/tower-inactive-hosts/reports/inactive_hosts.csv"
 
     - name: Upload latest report
